fix issues on mobile version of portfolio

--- a/style.css
+++ b/style.css
@@ -604,10 +604,9 @@ footer::after {
   }
 
   .jobs {
-    width:
-      calc(
-        (100% / 3) - 10px
-      ); /* Set the width of each item to one-third of the container minus 10px for the margins */
+    width: calc(
+      (100% / 3) - 10px
+    ); /* Set the width of each item to one-third of the container minus 10px for the margins */
 
     margin: auto; /* Set the width of each item to one-third of the container minus 10px for the margins */
   }
@@ -647,8 +646,7 @@ footer::after {
   .footer-container {
     display: flex;
     justify-content: space-between;
-    background-image:
-      url(Imgs/illustration-1-contact-form-desktop.svg),
+    background-image: url(Imgs/illustration-1-contact-form-desktop.svg),
       url(Imgs/illustration-2-contact-form-desktop.svg),
       url(Imgs/illustratoin-3-contact-form-desktop.svg);
     background-repeat: no-repeat;
@@ -704,5 +702,24 @@ footer::after {
 
   .submit-button {
     align-self: flex-start;
+  }
+}
+
+@media (min-width: 365px) {
+  .menu-bar-close {
+    display: none;
+  }
+
+  .menu-list {
+    display: none;
+  }
+
+  .input-full-name {
+    display: none;
+  }
+
+  .menu-bar {
+    margin-top: 2%;
+    margin-left: 70%;
   }
 }
